--- a/css/styles.css
+++ b/css/styles.css
@@ -473,15 +473,10 @@ a.navigation-list__item:hover, a.navigation-list__item:focus, a.navigation-list_
     }
 
     .page-header {
-        /*clear:both;*/
-        flex-direction: column;
+        clear: both;
         height: 150px;
         padding: var(--tiny-space);
         margin-bottom: 70px;
-    }
-
-    .page-header__item:last-child {
-        text-align: center;
     }
 
     .navigation-list li {
